--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <title></title>
+  <title>Doctor Aranea Site</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-
-<header>Заголовок страницы</header>
-
-<nav>Меню навигации</nav>
-
-<aside>Боковая колонка SideBar</aside>
-
-<article>
- Контент - основное содержимое страницы.
-</article>
+<body class="back">
+  <canvas id='cnvs'></canvas>
+  <img class="cybercorpus" src="images/CyberCorpus.png"/>
+  <div class="pageMainDiv">
+    <div class="pageMainDivTitle">Doctor Aranea</div>
+  </div>
+</body>
