--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <img class="cybercorpus" src="images/CyberCorpus.png"/>
   <div class="pageMainDiv">
     <div class="pageMainDivTitle">Doctor Aranea</div>
+    <div>
+      <video controls width="500">
+        <source src="videos/rick.mp4" type="video/mp4"/>
+      </video>
+    </div>
   </div>
 </body>
