--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <img class="cybercorpus" src="images/CyberCorpus.png"/>
   <div class="pageMainDiv">
     <div class="pageMainDivTitle">Doctor Aranea</div>
-    <div>
+    <div class="rick">
       <video controls width="500">
         <source src="videos/rick.mp4" type="video/mp4"/>
       </video>
