--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <img class="cybercorpus" src="images/CyberCorpus.png"/>
   <div class="pageMainDiv">
     <div class="pageMainDivTitle">Doctor Aranea</div>
-    <div class="rick">
+    <div class="why_are_you_here">
       <video controls width="500">
-        <source src="videos/rick.mp4" type="video/mp4"/>
+        <source src="videos/what_are_u_trying_to_find_here.mp4" type="video/mp4"/>
       </video>
     </div>
   </div>
