--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body class="back">
   <canvas id='cnvs'></canvas>
-  <img class="cybercorpus" src="images/CyberCorpus.png"/>
+  <!-- <img class="cybercorpus" src="images/CyberCorpus.png"/> -->
   <div class="pageMainDiv">
-    <div class="pageMainDivTitle">Doctor Aranea</div>
+    <!-- <div class="pageMainDivTitle">Doctor Aranea</div> -->
     <div class="why_are_you_here">
-      <video controls width="500">
+      <video controls class="video">
         <source src="videos/what_are_u_trying_to_find_here.mp4" type="video/mp4"/>
       </video>
     </div>
